--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -56,7 +56,7 @@ header{
     background-repeat: no-repeat;
     background-position: top;
     background-size: cover;
-    height: 800px;
+    height: 600px;
     position: relative;
 }
 
@@ -66,12 +66,12 @@ header{
     position: relative;
     left: 50%;
     transform: translate(-50%);
-    padding-top: 300px;
+    padding-top: 200px;
 }
 
 
 h1 {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Ubuntu', 'Roboto', 'Open Sans', sans-serif;
     font-size: 42px;
     color: white;
     stroke: 3px black;
@@ -116,14 +116,14 @@ h1 {
 }
 
 h2 {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Ubuntu', 'Roboto', 'Open Sans', sans-serif;
     font-size: 36px;
     color: black;
     width: 300px;
 }
 
 p {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Ubuntu', 'Roboto', 'Open Sans', sans-serif;
     font-size: 20px;
     color: black;
     width: 400px;
@@ -146,3 +146,97 @@ p {
     justify-content: space-between;
 }
 
+.classification {
+    height: 600px;
+    background-color: blueviolet;
+
+}
+
+.classification .container3 .box {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.margin {
+    width: 80%;
+    height: 90px;
+    position: relative;
+    left: 50%;
+    transform: translate(-50%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    position: relative;
+}
+
+.container3 {
+    width: 80%;
+    height: 500px;
+    position: relative;
+    left: 50%;
+    transform: translate(-50%);
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+
+h3 {
+    font-family: 'Ubuntu', 'Roboto', 'Open Sans', sans-serif;
+    font-size: 24px;
+    color: white;
+}
+
+.box {
+    width: 200px;
+    height: 100px;
+    background-color: white;
+}
+
+.image-box {
+    background-image: url('../img/thumbnail-witcher.jpg');
+    background-position: center;
+    background-size: cover;
+    width: 100px;
+    height: 100px;
+}
+
+.titulo-box {
+    font-family: 'Ubuntu', 'Roboto', 'Open Sans', sans-serif;
+    font-size: 12px;
+    color: black;
+    width: 100px;
+    padding-top: 20px;
+    
+}
+
+.info-box {
+    margin-left: 10px;
+    width: 100px;
+    height: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.tag-icon {
+    width: 100px;
+    height: 100px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.tag {
+    font-family: 'Ubuntu', 'Roboto', 'Open Sans', sans-serif;
+    color: white;
+    font-size: 12px;
+    background-color: rgb(0, 54, 231);
+    border-radius: 10px;
+    width: 50px;
+}
