--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -13,17 +13,28 @@ header{
 
 
 .container {
-    width: 80%;
+    width: 70%;
     height: 90px;
     position: relative;
     left: 50%;
     transform: translate(-50%);
-    
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .logo {
     position: absolute;
-    padding-top: 20px;
+    padding-top: 10px;
+}
+
+.menu {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    margin-left: 650px;
 }
 
 .botao1 {
@@ -31,23 +42,21 @@ header{
     border: none;
     border-radius: 20px;
     padding: 8px;
-    background-color: blueviolet;
+    background-color: #89379a;
     color: white;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    float: right;
     margin: 10px;
     
 }
 
 .botao2 {
     width: 120px;
-    border: 1px solid blueviolet;
+    border: 1px solid #89379a;
     border-radius: 20px;
     padding: 8px;
     background-color: white;
-    color: blueviolet;
+    color: #89379a;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    float: right;
     margin: 10px;
 }
 
@@ -61,7 +70,7 @@ header{
 }
 
 .info{
-    width: 80%;
+    width: 70%;
     height: 90px;
     position: relative;
     left: 50%;
@@ -84,7 +93,7 @@ h1 {
     border: none;
     border-radius: 20px;
     padding: 8px;
-    background-color: blueviolet;
+    background-color: #89379a;
     color: white;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 18px;
@@ -97,7 +106,7 @@ h1 {
     border: none;
     border-radius: 20px;
     padding: 8px;
-    background-color: blueviolet;
+    background-color: #89379a;
     color: white;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 18px;
@@ -135,7 +144,7 @@ p {
 }
 
 .container2 {
-    width: 80%;
+    width: 70%;
     height: 600px;
     position: relative;
     left: 50%;
@@ -146,9 +155,21 @@ p {
     justify-content: space-between;
 }
 
+.info-phone {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    height: 525px;
+}
+
+.info-phone img {
+    width: 100%;
+    
+}
+
 .classification {
     height: 450px;
-    background-color: blueviolet;
+    background-color: #89379a;
 
 }
 
@@ -167,7 +188,7 @@ p {
 }
 
 .margin {
-    width: 80%;
+    width: 70%;
     height: 400px;
     position: relative;
     left: 50%;
@@ -218,7 +239,7 @@ h3 {
 }
 
 .box {
-    width: 200px;
+    width: 300px;
     height: 100px;
     background-color: white;
 }
@@ -233,16 +254,16 @@ h3 {
 
 .titulo-box {
     font-family: 'Ubuntu', 'Roboto', 'Open Sans', sans-serif;
-    font-size: 12px;
+    font-size: 14px;
     color: black;
-    width: 100px;
+    width: 200px;
     padding-top: 20px;
     
 }
 
 .info-box {
     margin-left: 10px;
-    width: 100px;
+    width: 200px;
     height: 100px;
     display: flex;
     flex-direction: column;
@@ -251,12 +272,13 @@ h3 {
 }
 
 .tag-icon {
-    width: 100px;
+    width: 150px;
     height: 100px;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
+    margin-right: 50px;
 }
 
 .tag {
@@ -266,4 +288,89 @@ h3 {
     background-color: rgb(0, 54, 231);
     border-radius: 10px;
     width: 50px;
+}
+
+.formulario {
+    height: 450px;
+    background-color: #eeeeee;
+}
+
+.container5 {
+    width: 70%;
+    height: 450px;
+    position: relative;
+    left: 50%;
+    transform: translate(-50%);
+}
+
+.form-info {
+    margin-top: 20px;
+}
+
+h4 {
+    font-family: 'Ubuntu', 'Roboto', 'Open Sans', sans-serif;
+    font-size: 24px;
+    color: #89379a;
+    text-align: center;
+    margin-top: 40px;
+}
+
+.form-text {
+    font-family: 'Ubuntu', 'Roboto', 'Open Sans', sans-serif;
+    font-size: 18px;
+    color: #464646;
+    text-align: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    width: 100%;
+}
+
+.imput1 {
+    width: 500px;
+    height: 40px;
+    border: 1px solid #aaa;
+    border-radius: 20px;
+}
+
+.imput2 {
+    width: 500px;
+    height: 100px;
+    border: 1px solid #aaa;
+    border-radius: 20px;
+}
+
+form {
+    left: 50%;
+    transform: translate(-50%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    position: relative;
+}
+
+.botao5 {
+    width: 170px;
+    border: none;
+    border-radius: 20px;
+    padding: 8px;
+    background-color: #89379a;
+    color: white;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 18px;
+}
+
+.rodape {
+    width: 100%;
+    height: 100px;
+    background-color: #89379a;
+}
+
+.text-rodape {
+    font-family: 'Ubuntu', 'Roboto', 'Open Sans', sans-serif;
+    font-size: 18px;
+    color: white;
+    text-align: center;
+    width: 100%;
+    margin-left: 200px;
 }
