--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -25,16 +25,12 @@ header{
 }
 
 .logo {
-    position: absolute;
     padding-top: 10px;
 }
 
 .menu {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    margin-left: 650px;
+    width: 300px;
+    
 }
 
 .botao1 {
@@ -46,7 +42,7 @@ header{
     color: white;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 10px;
-    
+    cursor: pointer;
 }
 
 .botao2 {
@@ -156,7 +152,6 @@ p {
 }
 
 .info-phone {
-    position: absolute;
     bottom: 0;
     right: 0;
     height: 525px;
@@ -293,6 +288,7 @@ h3 {
 .formulario {
     height: 450px;
     background-color: #eeeeee;
+    padding-top: 50px;
 }
 
 .container5 {
@@ -303,8 +299,8 @@ h3 {
     transform: translate(-50%);
 }
 
-.form-info {
-    margin-top: 20px;
+.video {
+    height: 562px;
 }
 
 h4 {
@@ -312,7 +308,7 @@ h4 {
     font-size: 24px;
     color: #89379a;
     text-align: center;
-    margin-top: 40px;
+    
 }
 
 .form-text {
@@ -330,6 +326,7 @@ h4 {
     height: 40px;
     border: 1px solid #aaa;
     border-radius: 20px;
+    padding-left: 20px;
 }
 
 .imput2 {
@@ -337,6 +334,7 @@ h4 {
     height: 100px;
     border: 1px solid #aaa;
     border-radius: 20px;
+    padding-left: 20px;
 }
 
 form {
@@ -372,5 +370,125 @@ form {
     color: white;
     text-align: center;
     width: 100%;
-    margin-left: 200px;
+    
+}
+
+.fas.fa-times-circle {
+    font-size: 30px;
+    color: #89379a;
+    display: block;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
+}
+
+.modal {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    background-color: rgb(0,0,0,0.7);
+    top: 0;
+    left: 0;
+    display: none;
+}
+
+.modal-content {
+    background: white;
+    width: 600px;
+    height: 400px;
+    top: 50%;
+    left: 50%;
+    transform:translate(-50%, -50%);
+    position: absolute;
+}
+
+.createcount {
+    padding: 50px;
+}
+
+.fas.fa-bars {
+    display: none;
+}
+
+
+@media (max-width:480px){
+
+.container{
+    width: 90%;
+    padding-top: 30px;
+    flex-direction: column;
+}
+
+.menu {
+    display: none;
+}
+
+.container3 {
+    flex-direction: column;
+    padding-top: 30px;
+}
+
+.container4 {
+    flex-direction: column;
+    padding-top: 30px;
+}
+
+.classification {
+    height: 900px;
+}
+
+.margin {
+    width: 90%;
+    height: 800px;
+}
+
+h1 {
+    font-size: 32px;
+}
+
+.container2 {
+    width: 90%;
+    height: 1000px;
+    flex-direction: column;
+}
+
+h2 {
+    padding-top: 40px;
+    padding-bottom: 20px;
+}
+
+p {
+    width: 300px;
+}
+
+.imput1 {
+    width: 300px;
+}
+
+.imput2 {
+    width: 300px;
+}
+
+.rodape {
+    height: 150px;
+}
+
+.fas.fa-bars {
+    font-size: 30px;
+    color: #89379a;
+    display: inline-block;
+}
+
+.menu2 {
+    position: absolute;
+    right: 30px;
+}
+
+.modal-content {
+    width: 350px;
+    height: 400px;
+}
+
+
 }
